WIP: implement root angle analysis